--- a/app/views/daily_logs/_user_summary.html.haml
+++ b/app/views/daily_logs/_user_summary.html.haml
@@ -5,7 +5,7 @@
         .col-md-4
           %h2
             =value[:name]
-        .col-md-8.pull-right
+        .col-md-8.pull-right.datecolor
           =value[:logdate]
       %h3
         Work
