--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,15 +12,6 @@ body {
   margin-bottom: 60px;
   background-color: #f2f2f2;
 }
-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
-}
 
 
 /* Custom page CSS
@@ -31,10 +22,6 @@ body > .container {
   padding: 60px 15px 0;
 }
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
-}
 
 code {
   font-size: 80%;
@@ -64,15 +51,30 @@ code {
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    background-color:#394051;
 }
 .page
 {
   background-color:white;
   width : 50%;
+  padding-top:30px;
+}
+.centeralign
+{
+  padding-top:9px;
 }
 
 #wrapper.toggled #sidebar-wrapper {
     width: 250px;
+}
+.headerclass
+{
+  padding-top:15px;
+  padding-bottom:5px;
+}
+.datecolor
+{
+  color:#55B6AE;
 }
 
 #page-content-wrapper {
@@ -88,7 +90,6 @@ code {
 }
 
 /* Sidebar Styles */
-
 .sidebar-nav {
     position: absolute;
     top: 0;
@@ -106,18 +107,18 @@ code {
 .sidebar-nav li a {
     display: block;
     text-decoration: none;
-    color: #999999;
+    color:white ;
 }
 
 .sidebar-nav li a:hover {
     text-decoration: none;
-    color: #fff;
+    color: #f0f0f0;
     background: rgba(255,255,255,0.2);
 }
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
-    color : #ffff;
+    color : #484848;
 }
 a.active
 {
@@ -130,16 +131,16 @@ a.active
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
+    color: white;
+  }
 
 .sidebar-nav > .sidebar-brand a:hover {
     color: #fff;
     background: none;
 }
-input[type="text"]
+.form-control
 {
-  width:50%;
+  width:100%;
 }
 #reportrange
 {
@@ -149,6 +150,12 @@ input[type="text"]
   border: 1px solid #ccc; 
   width: 100%;
 }
+#datetime_ida
+{
+  border-color: #55B6AE;
+  color: #55b6ae;
+  background-color: white;
+}
 .pull-right
 {
   text-align:right;
@@ -156,8 +163,8 @@ input[type="text"]
 }
 .btn-default
 {
-  border: 2px solid #1aff1a;
-  color: #1aff1a;
+  border: 2px solid #45CDC5;
+  color: #45CDC5;
   background-color:white;
 
 }
@@ -165,6 +172,13 @@ input[type="text"]
 {
   width:75%;
 }
+.projects_filter
+{
+  width: 25%;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  height: 35px;
+  }
 .imageclass
 {
   height: 150px ;
@@ -175,4 +189,26 @@ input[type="text"]
   display: block;
   margin-left: auto;
   margin-right: auto;
-  }
+}
+.btn-change
+{
+  background-color:#55B6AE;
+  border-color:#55B6AE;
+  color:white;
+  margin-bottom:20px;
+ 
+}
+.added
+{
+  width: 28%;
+  height: 40px;
+  background-color: white;
+  border-color: #E9E9E9;
+}
+.imagecircle
+{
+ border-radius: 50%;
+ width:50px;
+ height:50px;
+}
+
