--- a/app/views/daily_logs/new.html.haml
+++ b/app/views/daily_logs/new.html.haml
@@ -1,7 +1,14 @@
 %div.container-fluid
 %div.row
   %div.col-md-4
-    %input{ "type"=>"text","name"=>"daterange"} 
+    -#%input{ "type"=>"text","name"=>"daterange"}
+    -#%i.fa.fa-calendar.form-control-feedback
+    #calendar2.ui
+      .ui.input.left.icon
+        %i.calendar.icon
+        %input{ "type"=>"text","name"=>"daterange"}
+
+
 %div.row
   %div.col-md-4
     = select_tag "projects_filter", options_for_select(@projects.map {|u| [u.name,u.id]}),{:include_blank => "All", :default => nil,:class => "projects_filter"}
@@ -19,13 +26,13 @@
       %h3.headerclass
         Work
       %div.project
-        = select_tag "projects[id]", options_for_select(@projects.map {|u| [u.name,u.id]}),:onchange => "alert_me_test()",:include_blank => "Select project", :default => nil,:class => "added"
+        = select_tag "projects[]", options_for_select(@projects.map {|u| [u.name,u.id]}),:class => "added",:prompt => "Select Project", :required => "required" 
         //%div.task
         %br
         %h5.task
           Task
         %div
-          %input.form-control{"maxlength"=>"300","name"=>"projects[LogText][]","required"=>"required","type"=>"text","placeholder"  =>"  enter LogEntry"}
+          %input.form-control{"maxlength"=>"300","required"=>"required","type"=>"text","placeholder"  =>"  enter LogEntry"}
           %div
           %br
           %button.btn.btn-default.add_field_button{"id"=>"company"}
@@ -40,7 +47,7 @@
           Learning
         %p 
           what did you learn today?
-        %input.form-control{"name"=>"LearningLog","required"=>"required","type"=>"text","placeholder"  =>"  enter learning log "} 
+        %input.form-control{"name"=>"learning_log","required"=>"required","type"=>"text","placeholder"  =>"  enter learning log "} 
         %hr
         %div
         %h3
@@ -61,3 +68,6 @@
 
 :javascript
   DailyLog();
+  $(document).ready(function() {
+    
+  });
