--- a/app/views/daily_logs/_user_summary.html.haml
+++ b/app/views/daily_logs/_user_summary.html.haml
@@ -11,17 +11,21 @@
           =value[:logdate]
       %h3
         Work
-      -value[:beautifulcode].each do |project,logtext|
-        %button.btn.btn-default.btn-arrow-left
+      -value[:beautifulcode].each do |project,logtexts|
+        %a.ui.tag.label
           =project
-        %p
-          =logtext
+        %ul
+          -logtexts.each do |logtext|
+            %li
+              =logtext[0]
       -value[:clients].each do |client,records|
-        -records.each do |pname,log|
+        -records.each do |pname,logs|
           %a.ui.tag.label
             =pname
-          %p
-            =log
+          %ul
+            -logs.each do|log|
+              %li
+                =log[0]
       %hr
 
       %h5
@@ -33,8 +37,9 @@
         TakeAway
       %div{display:"list-item"}
         =value[:takeaway]
-      %div
-        =link_to "Edit log",edit_log_path(:log_id => value[:log_id])
+      -if(current_user.id == value[:user_id])
+        %div
+          =link_to "Edit log",edit_log_path(:log_id => value[:log_id]),:class => "btn btn-change btn-md pull-right"
   %br
   %br
   %br
