--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,7 +49,11 @@
                 Logout
             - else
               %a{:href => "/auth/google_oauth2"}
-                Logout
+                Login
+      #container.container
+      - flash.each do |message_type, message|
+        .alert{ class: "alert-#{message_type}" }
+          = message
       %div{:id=>"page-content-wrapper"}
         = yield
               
