--- a/app/views/daily_logs/summary.html.haml
+++ b/app/views/daily_logs/summary.html.haml
@@ -1,3 +1,4 @@
+-#remove deprecated files
 %h1
   Summary
 =render :partial => "daily_logs/user_summary",object: @log_summary,locals: { log_summary: @log_summary}
