bug fixes and model specs wip

--- a/app/views/daily_logs/_user_list.html.haml
+++ b/app/views/daily_logs/_user_list.html.haml
@@ -1,5 +1,5 @@
 .container
-  - @All_users.each_slice(4).each do |users|
+  - @all_users.each_slice(4).each do |users|
     .row
       - users.each do |user|
         .col-sm-3.col-xs-6.hover-cover
