code review comments 28th June

--- a/app/views/daily_logs/index.html.haml
+++ b/app/views/daily_logs/index.html.haml
@@ -1,3 +1,4 @@
+-##TODO you are going to change this UX
 %pre
 - if current_user
   = link_to 'fill the daily log', new_daily_log_path, class: 'btn btn-primary btn-lg' 
