code review comments 1st JULY

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+// TODO you should put css related different pages in different files
 // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 
